--- a/app.yml
+++ b/app.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app-wil-deployment
+  name: app-wil
 spec:
   selector:
     matchLabels:
@@ -21,7 +21,7 @@ spec:
 kind: Service
 apiVersion: v1
 metadata:
-  name: app-wil-service
+  name: app-wil
 spec:
   type: LoadBalancer
   selector:
